# fastapi-ca

./: .env  config.py  containers.py  database.py  database_models.py  main.py  middlewares.py  pyproject.toml
common/: auth.py  logger.py  messaging.py
example/ch10_02/: celery_result.py
example/ch11_01/: context_test.py
migrations/versions/: 2024_04_16_1549-eaf13f38b8ea_add_user_table.py  2024_04_24_1729-669f9f2964f8_user_add_memo.py  2024_04_30_1605-ccf21c0eb84c_add_note_tag.py
note/application/: note_service.py
note/domain/: note.py
note/infra/db_models/: note.py
note/infra/repository/: note_repo.py
user/application/: user_service.py  user_service_test.py
user/domain/: user_test.py
user/domain/repository/: user_repo.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
